html about selesai

--- a/index.html
+++ b/index.html
@@ -20,22 +20,48 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
-    
-
-    <!-- Navbar -->
-      <div class="navbar">
-        <p>Daneil Candra</p>
-        <div class="nav-link">
-            <div><a href="http://">Home</a></div>
-            <div><a href="http://">About</a></div>
-            <div><a href="http://">Contact Us</a></div>
-            <div><a href="http://">Team</a></div>
-        </div>
-      </div>
-
 
 </head>
 <body>
+<div class="container">
+   
+  <!-- Navbar -->
+    <div class="navbar">
+      <p>Daneil Candra</p>
+      <div class="nav-link">
+          <div><a href="http://">Home</a></div>
+          <div><a href="http://">About</a></div>
+          <div><a href="http://">Contact Us</a></div>
+          <div><a href="http://">Team</a></div>
+      </div>
+    </div>
+</div>
+
+<!-- hero image -->
+<div class="text-hero">
+  <p>Hello</p>
+  <p>I'M Daniel Candra</p>
+  <p>Freekancing with designer <br>& Developer</p>
+
+  <button class="btn-here">Here me</button>
+  <button class="btn-download">Download CV</button>
+</div>
+
+<img src="img/model.png" alt="" class="model">
+
+<!-- About -->
+<div class="about">
+  <img src="../Web-Portofolio/img/about-img.png" alt="">
+  <div class="text-about">
+      <p>About Me</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa id sapiente ea reiciendis, assumenda distinctio, dolorem libero explicabo nobis ut reprehenderit. Ab, dignissimos consequuntur nam non veniam mollitia maiores. Eius?</p>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus facilis quod pariatur, dolore impedit tempora corrupti sit? Deleniti, aut rerum!</p>
+      <button class="btn-about-here">Here me</button>
+      <button class="btn-about-download">Download CV</button>
+  </div>
+</div>
+
+  
     
 </body>
 </html>
