--- a/index.html
+++ b/index.html
@@ -4,64 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Portofolio </title>
+    <title>Web Portofolio</title>
     <!-- css custom -->
-    <link rel="stylesheet" href="CSS/style.css"> 
-
+    <link rel="stylesheet" href="style.css">
 
     <!-- font roboto -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:ital,wght@0,100;0,400;1,500;1,700&display=swap" rel="stylesheet">
+    <!-- Font lobster -->
+    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <!-- fontawesom -->
 
-
-    <!--font lobster-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
 
 </head>
 <body>
-<div class="container">
-   
-  <!-- Navbar -->
-    <div class="navbar">
-      <p>Daneil Candra</p>
-      <div class="nav-link">
-          <div><a href="http://">Home</a></div>
-          <div><a href="http://">About</a></div>
-          <div><a href="http://">Contact Us</a></div>
-          <div><a href="http://">Team</a></div>
-      </div>
+    <div class="container">
+            <!-- navbar -->
+        <div class="navbar">
+            <p>Daneil Candra</p>
+
+            <div class="nav-link">
+                <div><a href="http://">Home</a></div>
+                <div><a href="http://">About</a></div>
+                <div><a href="http://">Contact Us</a></div>
+                <div><a href="http://">Team</a></div>
+            </div>
+        </div>
     </div>
-</div>
 
-<!-- hero image -->
-<div class="text-hero">
-  <p>Hello</p>
-  <p>I'M Daniel Candra</p>
-  <p>Freekancing with designer <br>& Developer</p>
+    <!-- Hero -->
+    <div class="text-hero">
+      <p>Hello,</p>
+      <p>I'M Daniel Candra</p>
+      <p>Freelancing with Designer <br> & Developer</p>
 
-  <button class="btn-here">Here me</button>
-  <button class="btn-download">Download CV</button>
-</div>
-
-<img src="img/model.png" alt="" class="model">
+      <button class="btn-here">Here me</button>
+      <button class="btn-download">Downlaod CV</button>
+  </div>
+  <img src="../Web-Portofolio/img/model.png" class="model"/>
 
 <!-- About -->
-<div class="about">
-  <img src="../Web-Portofolio/img/about-img.png" alt="">
-  <div class="text-about">
-      <p>About Me</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa id sapiente ea reiciendis, assumenda distinctio, dolorem libero explicabo nobis ut reprehenderit. Ab, dignissimos consequuntur nam non veniam mollitia maiores. Eius?</p>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus facilis quod pariatur, dolore impedit tempora corrupti sit? Deleniti, aut rerum!</p>
-      <button class="btn-about-here">Here me</button>
-      <button class="btn-about-download">Download CV</button>
+  <div class="about">
+      <img src="../Web-Portofolio/img/about-img.png" alt="">
+      <div class="text-about">
+          <p>About Me</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa id sapiente ea reiciendis, assumenda distinctio, dolorem libero explicabo nobis ut reprehenderit. Ab, dignissimos consequuntur nam non veniam mollitia maiores. Eius?</p>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus facilis quod pariatur, dolore impedit tempora corrupti sit? Deleniti, aut rerum!</p>
+          <button class="btn-about-here">Here me</button>
+          <button class="btn-about-download">Download CV</button>
+      </div>
   </div>
-</div>
-
-  
-    
-</body>
-</html>
