--- a/index.html
+++ b/index.html
@@ -58,3 +58,31 @@
           <button class="btn-about-download">Download CV</button>
       </div>
   </div>
+
+  <!-- skill -->
+  <div class="text-skill">
+    <p>Skills</p>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis aperiam, maxime illum tempore, voluptatem cumque, nam impedit nisi sit dolorem adipisci dolorum ipsa laboriosam libero eaque perferendis ipsum fuga similique.</p>
+</div>
+
+<div class="card-skill">
+    <div class="skill1">
+        <div>1</div>
+        <p>Web Developer</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum facilis voluptate, atque minus sit quisquam.</p>
+        <button>more...</button>
+    </div>
+        <div class="skill2">
+            <div>1</div>
+            <p>Web Developer</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum facilis voluptate, atque minus sit quisquam.</p>
+            <button>more...</button>
+        </div>
+            <div class="skill3">
+                <div>1</div>
+                <p>Web Developer</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum facilis voluptate, atque minus sit quisquam.</p>
+                <button>more...</button>
+            </div>
+</div>
