--- a/index.html
+++ b/index.html
@@ -86,3 +86,10 @@
                 <button>more...</button>
             </div>
 </div>
+
+<!-- contact -->
+<div class="contact">
+  <p>what any project in your mind ?</p>
+  <div class="garis"></div>
+  <button>Contact ME</button>
+</div>
