--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Portofolio</title>
     <!-- css custom -->
-    <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="CSS/style.css">
 
     <!-- font roboto -->
-    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E
+    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E"/>
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:ital,wght@0,100;0,400;1,500;1,700&display=swap" rel="stylesheet">
     <!-- Font lobster -->
-    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E
+    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <!-- fontawesom -->
@@ -45,11 +45,11 @@
       <button class="btn-here">Here me</button>
       <button class="btn-download">Downlaod CV</button>
   </div>
-  <img src="../Web-Portofolio/img/model.png" class="model"/>
+  <img src="/img/model.png" class="model"/>
 
 <!-- About -->
   <div class="about">
-      <img src="../Web-Portofolio/img/about-img.png" alt="">
+      <img src="/img/about-img.png" alt="">
       <div class="text-about">
           <p>About Me</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa id sapiente ea reiciendis, assumenda distinctio, dolorem libero explicabo nobis ut reprehenderit. Ab, dignissimos consequuntur nam non veniam mollitia maiores. Eius?</p>
@@ -93,3 +93,20 @@
   <div class="garis"></div>
   <button>Contact ME</button>
 </div>
+
+<!-- footer -->
+<div class="footer">
+  <p>Going to internet</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi incidunt nesciunt maxime accusamus. Sapiente reprehenderit aperiam tenetur nisi id consectetur eum, repudiandae error quod! Tempora officiis numquam fuga. Alias, necessitatibus.</p>
+
+  <div class="list-icon">
+      <div><i class="fa-brands fa-twitter"></i></div>
+      <div><i class="fa-brands fa-facebook"></i></div>
+      <div><i class="fa-brands fa-instagram"></i></div>
+      <div><i class="fa-brands fa-linkedin-in"></i></div>
+  </div>
+</div>
+</body>
+</html>
+</body>
+</html>
